Fix page layout regressions w.r.t. John's work
* Set a maximum for "xl" container width (cherry-picked from John's
  62e6ceda)
* Use a container, not a container-flex, at the top level
* Remove some min-width's that were causing horizontal scrolling for
  no reason

--- a/sass/theme/_bootstrap_variables.scss
+++ b/sass/theme/_bootstrap_variables.scss
@@ -4,3 +4,7 @@
 $body-bg: #ccc;
 // Links made by Bootstrap itself, e.g. the burger menu
 $link-color: black;
+
+$container-max-widths: (
+  xl: 1340px
+)
